Bug 229285 - kget crash when adding new download through web interface
Summary: kget crash when adding new download through web interface
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: webinterface (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-03 19:34 UTC by WiseLord
Modified: 2010-04-15 22:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description WiseLord 2010-03-03 19:34:07 UTC
Version:            (using KDE 4.4.0)
Compiler:          gcc-4.3.4 
OS:                Linux
Installed from:    Gentoo Packages

When enabling web-interface in KGet preferences, I can't add any URL to download using web-interface. KGet crashes with "Segmentation fault". GDB doesn't produce any _useful_ information:

Application: KGet (kget), signal: Segmentation fault
Traceback (most recent call last):
  File "/usr/share/gdb/auto-load/usr/lib64/libgobject-2.0.so.0.2200.4-gdb.py", line 9, in <module>
    from gobject import register
  File "/usr/share/glib-2.0/gdb/gobject.py", line 3, in <module>
    import gdb.backtrace
ImportError: No module named backtrace
[KCrash Handler]
#5  0x00000000004afaf2 in _start ()

But it is still possible to pause/resume/delete existing downloads with web-interface. Only adding new calls crash.
Comment 1 Matthias Fuchs 2010-04-15 22:41:18 UTC
SVN commit 1115285 by mfuchs:

Adding downloads to httpserver works again:
* Uses the defaultFolder of the selected group first, if no folder is defined then it first tries the RegExp rules and then the generalDestDir
* Crash fixed by not accessing list that might be empty with "first()"
* Correctly set the selected group when creating the download

BUG:229285

 M  +20 -4     httpserver.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1115285
Comment 2 Matthias Fuchs 2010-04-15 22:43:05 UTC
SVN commit 1115287 by mfuchs:

Backport r1115285
Adding downloads to httpserver works again:
* Uses the defaultFolder of the selected group first, if no folder is defined then it first tries the RegExp rules and then the generalDestDir
* Crash fixed by not accessing list that might be empty with "first()"
* Correctly set the selected group when creating the download

CCBUG:229285

 M  +20 -4     httpserver.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1115287