Adding downloads to httpserver works again: * Uses the defaultFolder of the selected group first, if no folder is defined then it first tries the RegExp rules and then the generalDestDir * Crash fixed by not accessing list that might be empty with "first()" * Correctly set the selected group when creating the download

BUG:229285

svn path=/trunk/KDE/kdenetwork/kget/; revision=1115285